<resources>
    <string name="app_name">Tarea1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginUser">Usuario</string>
    <string name="loginPassword">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="loginGoogle">Iniciar Sesión en Google</string>
    <string name="loginCreateAccount">¿No tienes cuenta? Crear una</string>
    <string name="loginSuccessful">Login Correcto</string>
    <string name="loginUnsuccessful">Login Incorrecto</string>
    <string name="functionalityNotImplemented">Funcionalidad no implementada aún</string>
    <string name="close">CERRAR</string>
    <string name="registerConfirmPassword">Confirmar contraseña</string>
    <string name="registerBirthdate">Fecha de nacimiento</string>
    <string name="registerCreateAccount">Crear cuenta</string>
    <string name="errorNotMatchingPasswords">Las contraseñas no coinciden</string>
    <string name="favourite">favorito</string>
    <string name="listTab">Lista</string>
    <string name="favTab">Favoritos</string>
</resources>