<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/loginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="80dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:id="@+id/textInputLayoutLoginUser">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginUser" android:id="@+id/textInputEditTextLoginUser"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLoginUser"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:id="@+id/textInputLayoutLoginPassword">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginPassword" android:id="@+id/textInputEditTextLoginPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/loginCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewLoginCreateAccount"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="80dp"/>
    <Button
            android:text="@string/loginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonLoginGoogle"
            app:layout_constraintBottom_toTopOf="@+id/textViewLoginCreateAccount"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonLogin"
            app:layout_constraintBottom_toTopOf="@+id/buttonLoginGoogle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>